2005-02-06  Chris Lyttle  <chris@wilddev.net>

	* src/scm/main.scm: Update for 1.8.11 release

2005-02-06  Derek Atkins  <derek@ihtfp.com>

	* src/engine/date.c: Fix the last-day-of-month computation for
	  leap years.  Need to use modulo, not divide.  (Patch by
	  Neil Williams.

2005-02-06  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/gnc-hbci-gettrans.c: Fix HBCI date range
	for statement download.

2005-02-05  Derek Atkins  <derek@ihtfp.com>

	* src/report/locale-specific/us/Makefile.am: make sure the
	  scheme reports are part of the DIST.

2005-01-30  Derek Atkins  <derek@ihtfp.com>

	* src/engine/Account.c:
	  This patch fixes: (QofAccessFunc)xaccAccountSetNonStdSCU in
	  src/engine/Account.c - that's a Set routine allocated as a
	  QofAccessFunc - the patch changes it to the appropriate Get
	  routine - the QofSetterFunc is OK.

	Neil Williams' QOF sync patch:
	* This patch updates the QOF merge code to current QOF to bring
	  the HEAD branch into sync. This update also makes
	  qof_book_merge_param_as_string output strings that are
	  compatible with QSF: using false instead of FALSE in string
	  output and using the QSF_XSD_TIME for the datestrings.
	
	* src/engine/Account.c:
	  - updated implementation of qofAccountSetParent().

	* src/engine/Scrub.c:
	* src/engine/Transaction.c:
	  Add the transaction guid to some error warning messages.
	  Fixes #165571.
	
2005-01-29  Derek Atkins  <derek@ihtfp.com>

	David Montenegro's patch for bugs #95551, #124367.
	* src/report/standard-reports/account-summary.scm:
	  Rewrote account summary report. Now has fields for
	  more account metadata. Properly handles mixed
	  asset/liability subaccounts.
	* src/report/standard-reports/html-acct-table.scm:
	  Added functionality (account-type &c) and bug fixes
	  (lone zb subtotals, spurious 'recursive-bal, typos)
	  needed to make the new account-summary.scm work.

	Thomas Bushnell's patch to protect non-backup pruning (#164875)